--- a/Curso-intro-terminal/5-explorar-archivos.html
+++ b/Curso-intro-terminal/5-explorar-archivos.html
@@ -4,20 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="/style/style.css">
     <title>Explorando el contenido de nuestros archivos</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="./2-repositorios-github.html">2- Configurar repositorios terminal</a></li>
-                <li><a href="./3-desplazarse-terminal.html">3- Desplazarse por terminal</a></li>
-                <li><a href="./4-manipular-archivos.html">4- Manipular archivos</a></li>
-                <li><a href="./5-explorar-archivos.html">5- Explorar contenido archivos</a></li>
+                <li><a href="/index.html">Index</a></li>
             </ul>
         </nav>
-</header>
+    </header>
 <br>
 <br>
 <br>
