--- a/Curso-intro-terminal/18-personalizar-terminal.html
+++ b/Curso-intro-terminal/18-personalizar-terminal.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/style.css">
-    <title>Redirecciones: pipe operator</title>
+    <title>Personalizar nuestra terminal</title>
 </head>
 <body>
     <header>
@@ -18,8 +18,6 @@
 <br>
 <br>
 <br>
-<br>
-<br>
 <div>
         <h1>Curso de Introducción a la Terminal y Línea de Comandos</h1>
         <a href="https://platzi.com/clases/2292-terminal/37341-que-es-la-terminal/">Link al curso<a>
@@ -29,15 +27,11 @@
     <p>root@Nas:~/proyectospersonales/Platzi/CursoTerminal#</p>
 </div>
 <div>
-        <H2>Redirecciones: pipe operator</H2>
+        <H2>Personalizar nuestra terminal</H2>
+        <p>Pondremos colores, iconos y tipos de fuentes</p>
         <ul>
-            <li>Con Pipe Operator va a permitir que standard output se convierta en el standar input de otro comando</li>
-            <li>ls -lh | less: permite explorar y incluso flitrar con /NOMB, sin guardarlos</li>
-            <li>ls -lh | tee output.txt | less: explorar, filtrar y guarda la busqueda en el archivo output.txt </li>
-            <li>ls -lh Pictures | sort | tee output.txt | less: busca archivos en Picures, ordena con Sort y los guarda en un archivo con tee.
-            <li>cat: abrir archivos, ej: cat Pictures.txt</li>
-            <li>sudo apt install cowsay: Installar cowsay o lolcat</li>
-            <li>cowsay -f dragon-and-cow "hola" | lolcat</li>
+            <li>Tilix: emulador de terminal</li>
+            <li>sudo apt install tilix, para instalar en Ubuntu</li>
         </ul>
 </div>
 </body>
