--- a/confi-entorno/2-repositorios-github.html
+++ b/confi-entorno/2-repositorios-github.html
@@ -4,20 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="/style/style.css">
     <title>Configuración de Entorno de Desarrollo</title>
 </head>
 <body>
-<header>
+    <header>
         <nav>
             <ul>
-                <li><a href="./2-repositorios-github.html">2- Configurar repositorios terminal</a></li>
-                <li><a href="./3-desplazarse-terminal.html">3- Desplazarse por terminal</a></li>
-                <li><a href="./4-manipular-archivos.html">4- Manipular archivos</a></li>
-                <li><a href="./5-explorar-archivos.html">5- Explorar contenido archivos</a></li>
+                <li><a href="/index.html">Index</a></li>
             </ul>
         </nav>
-</header>
+    </header>
 <br>
 <br>
 <br>
@@ -25,15 +22,15 @@
 <br>
 <div>
     <h1>Curso de Prework: Configuración de Entorno de Desarrollo en Windows</h1>
-    <a href="https://platzi.com/clases/2292-terminal/37341-que-es-la-terminal/">Link al curso<a>
+    <a href="https://platzi.com/clases/2042-prework-windows/32930-vinculando-nuestra-llave-ssh-en-github/">Link al curso<a>
 </div>
 <div>
         <p>
             ----------------------------------------------------------------- <br>
-
+                    Enter passphrase for key '/root/.ssh/id_rsa':<br>
                     Contraseña de Root Ubuntu - WS2: Nelsonadri89<br>
                     <br>
-                Toquen gitHub: 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<br>
+                
 
             ----------------------------------------------------------------- <br>
         </p>
