--- a/index.html
+++ b/index.html
@@ -4,29 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/styleindex.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>De 0 a 100 Desarrollador Fullstack!</title>
 </head>
 <body>
+    <header><h1>De 0 a 100 Desarrollador Fullstack!</h1></header>
     <div>
-        <h1>De 0 a 100 Desarrollador Fullstack!</h1>
-        <h3>Aqui podras navegar por las diferentes secciones del curso.</h3>
-    </div>
-    <div>
-        <h2>Indice</h2>
-        <nav>
+        <br>
+        <br>
+        <br>
+        <div>
+            <h2>Aqui podras navegar por las diferentes secciones del curso.</h2>
+            <h2>Indice</h2>
+        </div>
+        <div>
             <ul>
-                <li><a href="confi-entorno/2-repositorios-github.html"></a>Configuración de Entorno de Desarrollo</li>
-                <li><a href=""></a>Curso de Introducción a la Terminal y Línea de Comandos</a>
+                <li><h3>Configuración de Entorno de Desarrollo</h3><ul>
+                    <li><a href="confi-entorno/2-repositorios-github.html">Configuración de Entorno de Desarrollo</a></li>
+                </ul></li>
+            </ul>
+            <ul>
+                <li><h3>Curso de Introducción a la Terminal y Línea de Comandos</h3>
                     <ul>
-                        <li><a href="Curso-intro-terminal/3-desplazarse-terminal.html"></a>Desplazarse entre los directorios en la terminal</li>
+                        <li><a href="Curso-intro-terminal/3-desplazarse-terminal.html">Desplazarse entre los directorios en la terminal</a></li>
                         <li><a href="Curso-intro-terminal/4-manipular-archivos.html">Manipular archivos y directorios</a></li>
-                        <li><a href="Curso-intro-terminal/5-explorar-archivos.html"></a>Explorando el contenido de nuestros archivos</li>
+                        <li><a href="Curso-intro-terminal/5-explorar-archivos.html">Explorando el contenido de nuestros archivos</a></li>
+                        <li><a href="Curso-intro-terminal/6-wild-cards.html">Wildcards</a></li>    
+                        <li><a href="Curso-intro-terminal/7-pipe-line.html">Redirecciones: pipe operator</a></li>    
+                        <li><a href="Curso-intro-terminal/8-operadores-control.html">Encadenando comandos: operadores de control</a></li>    
+                        <li><a href="Curso-intro-terminal/9-permisos.html">Cómo se manejan los permisos?</a></li>    
+                        <li><a href="Curso-intro-terminal/10-modificando-permisos.html">Modificando permisos en la terminal</a></li>    
+                        <li><a href="Curso-intro-terminal/11-variables-entorno.html">Cómo configurar variables de entorno</a></li>    
+                        <li><a href="Curso-intro-terminal/12-comando-busqueda.html">Comandos de busqueda</a></li>    
+                        <li><a href="Curso-intro-terminal/13-comando-grep.html">Usando el comando grep</a></li>    
+                        <li><a href="Curso-intro-terminal/14-utilidades-red.html">Utilidades de red</a></li>    
+                        <li><a href="Curso-intro-terminal/15-comprimir-archivos copy.html">Comprimiendo archivos tar y zip</a></li>    
+                        <li><a href="Curso-intro-terminal/16-manejo-procesos.html">Manejo de procesos</a></li>    
+                        <li><a href="Curso-intro-terminal/17-editor-terminal.html">Editores en la terminal</a></li>    
+                        <li><a href="Curso-intro-terminal/18-personalizar-terminal.html">Personalizar nuestra terminal</a></li>    
                     </ul>
                 </li>
-                <li><a href=""></a></li>
             </ul>
-        </nav>
+        </div>
     </div>
 </body>
 </html>
